src/objects/JIG_Notes_Form__c.object
<CustomObject>
    <description>Holds a record for each clinical note instance of a jig appointment</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>JIG Notes Forms</relationshipLabel>
        <relationshipName>JIG_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>JIG Notes Forms</relationshipLabel>
        <relationshipName>JIG_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Note_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Note Instance</label>
        <referenceTo>Clinical_Note_Instance__c</referenceTo>
        <relationshipLabel>JIG Notes Forms</relationshipLabel>
        <relationshipName>JIG_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmation_Radiography__c</fullName>
        <label>Confirmation Radiography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pano</fullName>
                </value>
                <value>
                    <fullName>Periapical</fullName>
                </value>
                <value>
                    <fullName>iCat</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hygiene_Grade__c</fullName>
        <label>Hygiene Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tissue_Grade__c</fullName>
        <label>Tissue Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>JIG Notes Form</label>
    <nameField>
        <displayFormat>JNFN-{0000}</displayFormat>
        <label>JIG Notes Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JIG Notes Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>